fix: allow overflow in inputs

--- a/src/styles/components/inputs.css
+++ b/src/styles/components/inputs.css
@@ -2,9 +2,7 @@
   input,
   textarea,
   select {
-    @apply overflow-hidden px-2;
-
-    @apply border-b-2;
+    @apply border-b-2 px-2;
     @apply text-[color:var(--color-text,var(--color-content))];
     @apply border-[color:var(--color-bg-extra-accent,var(--color-surface-extra-accent))];
     @apply bg-[color:var(--color-bg,var(--color-surface))];
@@ -18,6 +16,7 @@
   }
 
   select {
+    @apply overflow-hidden;
     @apply hover:cursor-pointer;
   }
 }
